--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,19 +4,21 @@
   "exportConfig": true,
   "fileConfigs": [
     {
-      "path": "src/scss/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
-    },
-    {
       "path": "src/pug/index.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "src/scss/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
+      "src/blocks",
+      "src/pug",
       "src",
       "src/scss",
-      "src/pug"
+      "dist"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -57,8 +59,7 @@
     {
       "path": "src/scss/_blocks.scss",
       "imports": [
-        "src/blocks/page/_page.scss",
-        "src/blocks/expert/_expert.scss"
+        "src/blocks/page/_page.scss"
       ]
     },
     {
