--- a/prepros-6.config
+++ b/prepros-6.config
@@ -51,6 +51,8 @@
         "node_modules/bootstrap/scss/utilities/_flex.scss",
         "node_modules/bootstrap/scss/utilities/_spacing.scss",
         "src/blocks/page/_page.scss",
+        "src/blocks/header/_header.scss",
+        "src/blocks/cookies/_cookies.scss",
         "src/blocks/expert/_expert.scss",
         "src/blocks/LatestWorks/_latestworks.scss",
         "src/blocks/about/_about.scss"
@@ -65,6 +67,8 @@
     {
       "path": "src/pug/index.pug",
       "imports": [
+        "src/blocks/cookies/_cookies.pug",
+        "src/blocks/header/_header.pug",
         "src/blocks/expert/_expert.pug",
         "src/blocks/latestworks/_latestworks.pug",
         "src/blocks/about/_about.pug"
