--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,21 +4,19 @@
   "exportConfig": true,
   "fileConfigs": [
     {
-      "path": "src/pug/index.pug",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+      "path": "src/scss/style.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
-      "path": "src/scss/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+      "path": "src/pug/index.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "src/blocks",
-      "src/pug",
       "src",
       "src/scss",
-      "dist"
+      "src/pug"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -51,6 +49,8 @@
         "node_modules/bootstrap/scss/utilities/_flex.scss",
         "node_modules/bootstrap/scss/utilities/_spacing.scss",
         "src/blocks/page/_page.scss",
+        "src/blocks/header/_header.scss",
+        "src/blocks/cookies/_cookies.scss",
         "src/blocks/expert/_expert.scss",
         "src/blocks/LatestWorks/_latestworks.scss",
         "src/blocks/about/_about.scss"
@@ -59,7 +59,8 @@
     {
       "path": "src/scss/_blocks.scss",
       "imports": [
-        "src/blocks/page/_page.scss"
+        "src/blocks/page/_page.scss",
+        "src/blocks/expert/_expert.scss"
       ]
     },
     {
