--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "src/scss/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"dist/css/style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     },
     {
       "path": "src/pug/index.pug",
@@ -32,11 +32,26 @@
   },
   "imports": [
     {
+      "path": "src/pug/index.pug",
+      "imports": [
+        "src/blocks/clients/_clients.pug",
+        "src/blocks/footer/_footer.pug",
+        "src/blocks/hire/_hire.pug",
+        "src/blocks/formHire/_formHire.pug",
+        "src/blocks/cookies/_cookies.pug",
+        "src/blocks/header/_header.pug",
+        "src/blocks/expert/_expert.pug",
+        "src/blocks/latestworks/_latestworks.pug",
+        "src/blocks/about/_about.pug"
+      ]
+    },
+    {
       "path": "src/scss/style.scss",
       "imports": [
         "node_modules/reset.scss/reset.scss",
         "node_modules/bootstrap/scss/bootstrap-grid.scss",
         "src/scss/_fonts.scss",
+        "src/scss/_mixin.scss",
         "src/scss/_base.scss",
         "src/scss/_blocks.scss",
         "node_modules/bootstrap/scss/_functions.scss",
@@ -49,28 +64,15 @@
         "node_modules/bootstrap/scss/utilities/_flex.scss",
         "node_modules/bootstrap/scss/utilities/_spacing.scss",
         "src/blocks/page/_page.scss",
+        "src/blocks/clients/_clients.scss",
+        "src/blocks/footer/_footer.scss",
+        "src/blocks/hire/_hire.scss",
+        "src/blocks/formHire/_formHire.scss",
         "src/blocks/header/_header.scss",
         "src/blocks/cookies/_cookies.scss",
         "src/blocks/expert/_expert.scss",
         "src/blocks/LatestWorks/_latestworks.scss",
         "src/blocks/about/_about.scss"
-      ]
-    },
-    {
-      "path": "src/scss/_blocks.scss",
-      "imports": [
-        "src/blocks/page/_page.scss",
-        "src/blocks/expert/_expert.scss"
-      ]
-    },
-    {
-      "path": "src/pug/index.pug",
-      "imports": [
-        "src/blocks/cookies/_cookies.pug",
-        "src/blocks/header/_header.pug",
-        "src/blocks/expert/_expert.pug",
-        "src/blocks/latestworks/_latestworks.pug",
-        "src/blocks/about/_about.pug"
       ]
     }
   ],
@@ -116,7 +118,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7883,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
